[package]
name = "submarine"
version = "0.1.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.21.0"
demodesktopgraphics = {path = "../demodesktopgraphics"}
dinotreedemomenu = {path="../dinotreedemomenu"}
