[package]
name = "submarine"
version = "0.1.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.2"
rayon = "*"
num_cpus = "*"
demodesktopgraphics = {path = "../demodesktopgraphics"}
laid_dot = {path = "../laid_dot"}
ascii_num = {path = "../ascii_num"}
dinotreedemo = {path="../dinotreedemo"}
